# otter

./: .branch-notes-data-structures  .branch-notes-task-graph  .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  TODO  omp-parallel-for  otter-defs.sh  otter-env.sh  otter-run.sh  workspace.code-workspace
.config/: doxygen.cfg
cmake/: ConfigurePackageModulefile.cmake  FindOTF2.cmake  GenerateOtterPackageConfig.cmake  OtterConfig.cmake.in
docs/: .gitignore  README.md  conf.py  event-based-execution-graph.tex  notes.tex  requirements.txt  structured-blocks.tex  sync-regions.tex
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt
examples/omp/: omp-demo.c  omp-fibonacci.c  omp-parallel-2.c  omp-parallel-for.c  omp-parallel-if.c  omp-parallel-nested-single.c  omp-parallel-nested-taskloop.c  omp-parallel-single-nowait.c  omp-single-taskwait-after.c  omp-spawn-n-tasks-in-explicit-task-with-yield.c  omp-taskgroup-and-single.c  omp-taskgroup-parallel.c  omp-taskgroup-single.c  omp-taskloop-nogroup.c  omp-taskloop-yield.c
examples/task-graph/: CMakeLists.txt  f_fibonacci.F90  fibonacci.c  task-sequences.c
include/: callback.h  ompt-common.h  ompt-core-callbacks.h  ompt-core-types.h  ompt-tool-generic.h  otter-common.h  otter-ompt-header.h  otter-structs.h  stack.h  trace-check-error-code.h  trace-region-sync.h
include/api/: constants.h  otter-parallel.h  otter-serial.h
include/dtypes/: dynamic-array.h  queue.h
include/macros/: callback.h  core-callback.h  debug.h  general.h
include/modules/: task-tree-graphviz.h  task-tree.h
include/otter-core/: ompt-callback-macros.h  ompt-callback-prototypes.h  ompt-common.h  ompt-core-callbacks.h  ompt-core-types.h  ompt-core.h  otter-entry.h  otter-environment-variables.h  otter-structs.h  otter.h
include/otter-datatypes/: datatypes-common.h  dynamic-array.h  graph.h  queue.h  stack.h
include/otter-dt/: queue.h
include/otter-dtypes/: dynamic-array.h  graph.h  queue.h  stack.h
include/otter-task-graph/: task-graph.h  task-tree.h
src/: demo-debug-macros.c  demo-dynamic-array.c  demo-queue.c  demo-task-tree.c  omp-demo.c  ompt-core-callbacks.c  ompt-core.c
src/examples/: CMakeLists.txt  otter-serial-loop-taskwait.c
src/examples/omp/: CMakeLists.txt  omp-fibonacci.c  omp-getcpu.c  omp-master.c  omp-parallel-for-task.c  omp-parallel-nested-multi.c  omp-parallel-nested.c  omp-parallel-sequence-of-n.c  omp-parallel-single.c  omp-parallel.c  omp-peano-constructs.cpp  omp-single-taskwait-inside.c  omp-spawn-n-tasks-in-explicit-task-with-yield.c  omp-spawn-n-tasks.c  omp-taskgroup-parallel.c  omp-taskgroup.c  omp-taskloop-and-taskgroup.c  omp-taskloop-nogroup-single.c  omp-taskloop-single.c  omp-taskloop.c
src/examples/serial/: CMakeLists.txt  serial-empty.c  serial-fib.c  serial-loop.c  serial-phases-and-tasks.c  serial-phases.c  serial-single.c  serial-taskgroup-some.c  serial-taskwait-descendants.c  serial-taskwait-some.c
src/examples/task-graph/: CMakeLists.txt  omp-tg-basic.c  omp-tg-fib-anno-end-inside.c  omp-tg-fib-anno-outside.c  omp-tg-fib-cpp.cpp  omp-tg-fib-f90.F90  omp-tg-fib.c  omp-tg-loop-cpp.cpp  omp-tg-loop.c  omp-tg-taskloop-f90.F90  omp-tg-test-f90.F90  tg-exahype-enclave-tasks.cpp  tg-fib-user-macros.c  tg-fib.c  tg-loop-cpp.cpp  tg-loop-flavour-cpp.cpp  tg-loop-vec-cpp.cpp  tg-loop.c  tg-phase.c  tg-recursive-tasks.c  tg-task-sequences.c
src/examples/validation/: CMakeLists.txt
src/otter-ompt/: CMakeLists.txt  callback.h  ompt-callback-prototypes.h  otter-core.c  otter-entry.c  otter-entry.h  otter.h
src/otter-task-graph/: CMakeLists.txt  otter-task-graph-cpp-wrapper.cpp  otter-task-graph.F90  otter-task-graph.c  task-graph.c  task-tree.c
src/otter-trace/: CMakeLists.txt  source-location.c  strings.c  trace-archive-impl.h  trace-archive.c  trace-archive.h  trace-attribute-defs.h  trace-attribute-lookup.h  trace-attributes.h  trace-check-error-code.h  trace-common-event-attributes.h  trace-core.c  trace-filter-impl.h  trace-filter.c  trace-filter.h  trace-get-unique-id.h  trace-initialise.c  trace-location.c  trace-mmap.c  trace-ompt.c  trace-parallel-data.c  trace-region-def.c  trace-region-master.c  trace-region-parallel.c  trace-region-phase.c  trace-region-sync.c  trace-region-task.c  trace-region-types.h  trace-region-workshare.c  trace-src-ref.c  trace-src-ref.h  trace-state.c  trace-state.h  trace-static-constants.h  trace-string-registry.c  trace-strings.c  trace-structs.c  trace-task-context.c  trace-task-data.c  trace-task-graph.c  (+10 more)
src/otter/examples/: CMakeLists.txt  omp-demo.c  omp-getcpu.c  omp-master.c  omp-parallel-for.c  omp-parallel-nested.c  omp-parallel-single-for-fortran.f90  omp-parallel-single-nowait.c  omp-parallel-single.c  omp-spawn-n-tasks-in-explicit-task-with-yield.c  omp-taskloop-single.c  otter-serial-fib.F90  otter-serial-fib.c  otter-serial-loop.c  otter-serial-taskwait-some.c
src/otter/examples/omp/: CMakeLists.txt  omp-master.c  omp-parallel-nested.c  omp-parallel-sequence-of-n.c  omp-single-taskwait.c  omp-taskgroup-and-single.c  omp-taskgroup-single.c  omp-taskgroup.c  omp-taskloop-and-taskgroup.c
src/otter/examples/serial/: CMakeLists.txt  otter-serial-empty.c  otter-serial-single.c  serial-fib.F90  serial-fib.c  serial-loop.c  serial-phases-and-tasks.c  serial-phases.c  serial-single.c  serial-taskgroup-some.c  serial-taskwait-descendants.c  serial-taskwait-some.c
src/otter/examples/task-graph/: CMakeLists.txt  omp-tg-fib-anno-end-inside.c  omp-tg-fib-anno-outside.c  omp-tg-fib-cpp.cpp  omp-tg-fib-f90.F90  omp-tg-fib.c  omp-tg-loop-cpp.cpp  omp-tg-taskloop-f90.F90  omp-tg-test-f90.F90  tg-fib.c  tg-loop-vec-cpp.cpp
src/otter/examples/validation/: CMakeLists.txt
src/types/: CMakeLists.txt  dt-queue.c  dt-stack.c  otter-structs.c  otter-task-context.c  string_value_registry.cpp  vptr_manager.cpp
test/: CMakeLists.txt  char_ref_registry_test.cc  queue_test.cc  stack_test.cc  string_value_registry_test.cpp  value_registry_test.cpp  vptr_manager_test.cpp
(+212 files in other folders)
